--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "guli_portfolio",
+  "homepage": "https://suraiyakhoja.github.io/GR-Fashion-Academy-Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@jridgewell/remapping": "^2.3.5",
@@ -28,6 +31,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
