--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guli_portfolio",
-  "homepage": "https://suraiyakhoja.github.io/GR-Fashion-Academy-Portfolio/",
+  "homepage": "https://gulchekhrarakhimova.github.io/Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
